desing: dooray -> naver

--- a/popup.html
+++ b/popup.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dooray 이메일 요약 크롬 익스텐션</title>
+  <title>네이버 이메일 요약 크롬 익스텐션</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -82,7 +82,7 @@
   </style>
 </head>
 <body>
-  <h2>📌 Dooray 이메일 요약</h2>
+  <h2>📌 네이버 이메일 요약기</h2>
 
   <!-- 약관 동의 -->
   <button id="openTerms">📜 약관 보기</button>
@@ -106,7 +106,7 @@
     <div class="modal-content">
       <h3>📜 서비스 이용 약관</h3>
       <p>
-        이 확장 프로그램은 Dooray 이메일을 요약하여 제공합니다.<br>
+        이 확장 프로그램은 네이버 이메일을 요약하여 제공합니다.<br>
         이메일 내용이 OpenAI API를 통해 처리되며, 보안이 보장되지 않습니다.<br>
         이에 동의하지 않는 경우 서비스를 이용할 수 없습니다.
       </p>
