design: change color

--- a/popup.html
+++ b/popup.html
@@ -23,12 +23,12 @@
       border: none;
       border-radius: 5px;
       font-size: 14px;
-      background-color: #007bff;
+      background-color: #03c75b;
       color: white;
       transition: background 0.3s;
     }
     button:hover {
-      background-color: #0056b3;
+      background-color: #09a94d;
     }
     button:disabled {
       background-color: gray;
